# InstaCook

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
src/app/: globals.css  layout.tsx
src/app/api/ingredients/summary/: route.ts
src/app/api/integrations/instacart/export/: route.ts
src/app/api/menu-plans/: route.ts
src/app/api/recipes/: route.ts
src/app/api/recipes/random/: route.ts
src/app/api/recipes/search/: route.test.ts  route.ts
src/components/: HomePage.tsx
src/instacook/: __init__.py  main.py  models.py  service.py
src/lib/: ai-model.ts  instacart.test.ts  instacart.ts  recipe-normalize.test.ts  recipe-normalize.ts  recipe-page-extract.ts  recipe-page-fetch.test.ts  recipe-page-fetch.ts  recipe-schema.test.ts  recipe-schema.ts  recipe-search.test.ts  recipe-search.ts  recipe-service.test.ts  recipe-service.ts  recipe-web-search.test.ts  recipe-web-search.ts  schemas.ts
tests/: test_api.py
